--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: for-u-ravenwildegir
+application: ravenwildegir
 version: 1
 
 runtime: python27
@@ -9,9 +9,6 @@ handlers:
 - url: /(.*\.(gif|png|jpg|ico|css|js))
   static_files: \1
   upload: .*\.(gif|png|jpg|ico|css|js)
-- url: /(data.json)?
+- url: /.*
   script: index.app
-  secure: always
-- url: /scrape
-  script: scrape.py
   secure: always
